; ModuleID = '/home/carl/AnghaBench/upx/src/stub/src/extr_i386-linux.elf.execve-main.c_ascii5.c'
source_filename = "/home/carl/AnghaBench/upx/src/stub/src/extr_i386-linux.elf.execve-main.c_ascii5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32)* @ascii5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ascii5(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8, align 1
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  br label %8

8:                                                ; preds = %29, %3
  %9 = load i32, i32* %5, align 4
  %10 = srem i32 %9, 32
  %11 = trunc i32 %10 to i8
  store i8 %11, i8* %7, align 1
  %12 = load i8, i8* %7, align 1
  %13 = zext i8 %12 to i32
  %14 = icmp sge i32 %13, 26
  br i1 %14, label %15, label %20

15:                                               ; preds = %8
  %16 = load i8, i8* %7, align 1
  %17 = zext i8 %16 to i32
  %18 = sub nsw i32 %17, 43
  %19 = trunc i32 %18 to i8
  store i8 %19, i8* %7, align 1
  br label %20

20:                                               ; preds = %15, %8
  %21 = load i8, i8* %7, align 1
  %22 = zext i8 %21 to i32
  %23 = add nsw i32 %22, 65
  %24 = trunc i32 %23 to i8
  store i8 %24, i8* %7, align 1
  %25 = load i8*, i8** %4, align 8
  %26 = getelementptr inbounds i8, i8* %25, i32 -1
  store i8* %26, i8** %4, align 8
  store i8 %24, i8* %26, align 1
  %27 = load i32, i32* %5, align 4
  %28 = sdiv i32 %27, 32
  store i32 %28, i32* %5, align 4
  br label %29

29:                                               ; preds = %20
  %30 = load i32, i32* %6, align 4
  %31 = add i32 %30, -1
  store i32 %31, i32* %6, align 4
  %32 = icmp ugt i32 %31, 0
  br i1 %32, label %8, label %33

33:                                               ; preds = %29
  %34 = load i32, i32* %5, align 4
  ret i32 %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
